# bioseqdb

./: .gitattributes  .gitignore  Makefile  README.md
common/: mmseq2lib.h
entrypoint/: index.sql  mmseq.sql
examples/: QUERY.sql  example_call.sql
fasta-to-sql/: fasta-to-sql.py
mmseq2/: CMakeLists.txt  README.md  blosum.cpp  blosum.h  dbconn.cpp  dbconn.h  extension.cpp  main.cpp  mmseq.cpp  mmseq.h  mmseq2--0.0.0.sql  mmseq2.control  mmseq2.cpp  mmseq2.h  mock_function.cpp  mock_function.h  mock_structures.cpp  mock_structures.h  psql_interface.c  psql_interface.h  qsequence.cpp  qsequence.h  test.c  tsequence.cpp  tsequence.h
mmseq2/dev/: CMakeCache.txt  MMSeq2  Makefile  cmake_install.cmake
mmseq2/src/: CMakeLists.txt  Makefile  main.cpp  mmseq2.cpp  mmseq2.h  mock_structures.cpp  mock_structures.h
mmseq2/tst/: CMakeLists.txt  test_getters.cpp  test_results.cpp  test_structures.cpp
mmseq2/tst/data/: example.h  matches.txt
ops/docker/: Dockerfile  Dockerfile.mmseq2  Dockerfile.pg  docker-compose.yml  entrypoint.sql
pg/: CMakeLists.txt  config.h.in  extension.cpp  mmseq2--0.0.0.sql
tmp/: latest
